@@ -98,10 +98,12 @@ nosetests --with-doctest
 |--------------------------------------------|--------------------------------------|
 | [Sample and population variance][variance] | `variance([1, 2, 3], sample = True)` |
 | [Standard deviation][sd]                   | `standard_deviation([1, 2, 3])`      |
+| [Interquartile range][]                    | `interquartile_range([1, 3, 5, 7])`  |
 | [Standard scores (z-scores)][zscores]      | `z_scores([-2, -1, 0, 1, 2])`        |
 
 [variance]: http://simplestatistics.readthedocs.io/en/latest/#variance
 [sd]: http://simplestatistics.readthedocs.io/en/latest/#standard-deviation
+[Interquartile range]: http://simplestatistics.readthedocs.io/en/latest/#interquartile-range
 [zscores]: http://simplestatistics.readthedocs.io/en/latest/#standard-scores-z-scores 
 
 #### Linear regression
