@@ -8,6 +8,7 @@ Added
 
 * ``linear_regression_line()``
 * ``root_mean_square()``
+* ``interquartile_range()``
 
 0.1.5 (2016-07-30)
 ~~~~~~~~~~~~~~~~~~
